--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,17 @@ dist-ssr
 
 # Environment variables
 .env
-.env.*
 .env.local
 .env.*.local
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+*.egg-info/
+dist/
+build/
+venv/
+.venv/
+*.egg
